[package]
name = "img-parts-dump"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Display some image file information."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/img-parts-dump"
homepage = "https://github.com/Tamschi/img-parts-dump/tree/v0.0.1"
documentation = "https://docs.rs/img-parts-dump/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/img-parts-dump" }
is-it-maintained-open-issues = { repository = "Tamschi/img-parts-dump" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"

[dependencies]
img-parts = "0.3.0"
structopt = "0.3.21"
